Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -170,6 +170,13 @@ howpublished={\url{https://pm2.keymetrics.io}},
 note={Acessado em: 21 de agosto de 2023}
 }
 
+@misc{AUTOCANNON,
+author={Matteo Collina and other contributors},
+title={AUTOCANNON},
+howpublished={\url{https://github.com/mcollina/autocannon}},
+note={Acessado em: 31 de agosto de 2023}
+}
+
 @Book{DISTRIBUTEDNODE,
 author={Thomas Hunter II},
 title={Distributed Systems with Node.js},
